force-app/main/default/objects/FieloEE__Level__c/fields/FieloEE__Image__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Image__c</fullName>
    <formula>IMAGE("/servlet/servlet.FileDownload?file="+FieloEE__AttachmentId__c, "photo",50, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>