force-app/main/default/objects/FieloEE__Level__c/fields/FieloEE__IsActive__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this option will make the level active.</description>
    <inlineHelpText>Check this box in order to make this level active.</inlineHelpText>
    <label>is Active</label>
    <type>Checkbox</type>
</CustomField>