force-app/main/default/objects/FieloEE__Level__c/fields/FieloEE__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Order__c</fullName>
    <description>The hierarchy order of levels.</description>
    <inlineHelpText>Set the hierarchical order for the levels.</inlineHelpText>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>