force-app/main/default/objects/FieloEE__Level__c/recordTypes/FieloEE__Active.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Active</fullName>
    <active>true</active>
    <label>Active</label>
</RecordType>