force-app/main/default/objects/FieloEE__Level__c/recordTypes/FieloEE__Inactive.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Inactive</fullName>
    <active>true</active>
    <label>Inactive</label>
</RecordType>