force-app/main/default/objects/FieloEE__Level__c/listViews/FieloEE__All_Levels.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Levels</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Program__c</columns>
    <columns>FieloEE__Description__c</columns>
    <columns>FieloEE__IsActive__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Levels</label>
    <language>en_US</language>
</ListView>